--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <h1>Tutorial Composed by Andrew B Kim</h1>
+        <h1>Rango says...</h1>
 
         <div>
         hey there partner! <br />
@@ -20,8 +20,8 @@
         <div>
             <a href="/">Main</a><br />
             <a href="/rango/about/">About</a><br />
-            <img src="{{MEDIA_URL}}images/cat.jpg"
-            alt="Picture of a cat" />
+            <img src="{% static "images/rango.jpg" %}"
+            alt="Picture of Rango" />
             <!-- <a href = "/">Back to main</a> -->
         </div>
     </body>
